# architecture-pro-alexandrite

./: Makefile  README.md
Task1/: README.md
Task2/: README.md
Task3/: Makefile  README.md
Task3/services/service-a/: app.py  pyproject.toml
Task3/services/service-b/: Dockerfile  app.py  pyproject.toml
Task4/: README.md
Task5/: README.md
schema/: _spec.c4  model.c4
